<resources>
    <string name="app_name">AppPA</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="inserir">Inserir</string>
    <string name="carregando">Carregando</string>
    <string name="erroLogin">E-mail ou senha inválidos!</string>
    <string name="nomeAlbum">Nome do álbum</string>
    <string name="meusAlbuns">MEUS ÁLBUNS</string>
    <string name="inserirAlbum">INSERIR ÁLBUM</string>
    <string name="cadastreSeuUsuario">CADASTRE SEU USUÁRIO</string>
    <string name="file_provider_authority" translatable="false">app.ec.com.apppa.fileprovider</string>
</resources>
