<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="app.ec.com.apppa.SigninViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include"
            layout="@layout/progress_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:isVisible="@{viewModel.loadingVisibility}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/nome"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={viewModel.nome}"
            app:layout_constraintBottom_toTopOf="@+id/txtLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={viewModel.email}"
            app:layout_constraintBottom_toTopOf="@+id/txtPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/labError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erroLogin"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="@{viewModel.errorVisibility ? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintBottom_toTopOf="@+id/txtNome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword">

            <Button
                android:id="@+id/btnSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSignClick"
                android:text="@string/inserir" />
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>